# intent-agent-model-jvp-base

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  Makefile  README.md  deployment_metadata.json  pyproject.toml  requirements.txt
000-docs/: 000-INDEX.md  001-OD-CONF-github-template-setup.md  003-RA-ANLY-a2a-integration.md  006-OD-DEPL-template-deployment.md  007-RA-REPT-industry-examples.md  ARCHIVE-2025-11-11-PRE-NEW-PROJECT.md  CLEANUP-PLAN.md
000-usermanuals/: guide_agent_starter_pack_deployment.md  guide_gcp_generative_ai_overview.md
app/: a2a_tools.py  agent.py  agent_card.json  agent_card.py  iam1_config.py  sub_agents.py
app/app_utils/: deploy.py  tracing.py  typing.py
claudes-docs/: GITHUB-PAGES-DEPLOYMENT.md  GITHUB-TEMPLATE-SETUP.md  IAM1-FINE-TUNING-IMPROVEMENTS.md
claudes-docs/analysis/: A2A-INTEGRATION-ANALYSIS.md
data_ingestion/data_ingestion_pipeline/: pipeline.py
deployment/terraform/: github.tf  variables.tf
deployment/terraform/vars/: env.tfvars
docs/: index.html
slack-webhook/: main.py  requirements.txt
supreme-commander-agent/: .gitignore  DEPLOYMENT.md  Makefile  README.md  pyproject.toml
supreme-commander-agent/.github/workflows/: deploy_production.yaml  deploy_staging.yaml  pr_checks.yaml
supreme-commander-agent/app/: agent.py  agent_engine_app.py  firebase_interface.py  retrievers.py  slack_interface.py  tools.py
supreme-commander-agent/deployment/terraform/: main.tf  outputs.tf  variables.tf
supreme-commander-agent/tests/integration/: test_deployment.py
supreme-commander-agent/tests/unit/: test_agent.py  test_tools.py
(+4 files in other folders)
